Fixed HTML and styling bugs

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -9,7 +9,7 @@
 
     <!-- tCF logo -->
     <a class="navbar-brand logo-container mx-auto" href="/">
-      <img class="logo" src="{% static 'base/img/new_logo.png' %}">
+      <img class="logo" src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum home">
     </a>
 
     <!-- tCF search -->
