--- a/tcf_website/static/base/sidebar.css
+++ b/tcf_website/static/base/sidebar.css
@@ -29,6 +29,7 @@ body {
   background-color: var(--main-color);
   color: var(--background-color);
   padding-top: 1rem;
+  border: 0rem;
 }
 
 #sidebar-wrapper .list-group-item.active,
