--- a/tcf_website/templates/base/bugform.html
+++ b/tcf_website/templates/base/bugform.html
@@ -66,7 +66,7 @@
             <h5>Thanks for your help!</h5>
           </div>
           <div class="row justify-content-center">
-            <p> Your feedback has been recorded. </p>
+            <p> Your feedback has been sent to our team. </p>
           </div>
           <div class="row justify-content-center">
             <button type="button" data-dismiss="modal" class="btn btn-primary">Close</button>
