--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -9,7 +9,7 @@
         </li>
     {% empty %}
         <div class="row d-flex justify-content-center">
-            <div class="card col-3 text-center">
+            <div class="card col-12 col-sm-8 col-lg-4 text-center">
                 <div class="card-body">
                     <h4 class="card-title">
                         No Reviews <i class="far fa-frown-open fa-fw"></i>
