--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -22,16 +22,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 
-    {% block basestyles %}
-    {% endblock %}
+    {% block basestyles %}{% endblock %}
 
-    {% block styles %}
-    {% endblock %}
+    {% block styles %}{% endblock %}
 </head>
 
 <body class="body">
-  {% block body %}
-  {% endblock %}
+  {% block body %}{% endblock %}
 
   <!-- Bootstrap core JavaScript -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -41,11 +38,9 @@
           integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
           crossorigin="anonymous"></script>
 
-  {% block basejs %}
-  {% endblock %}
+  {% block basejs %}{% endblock %}
 
-  {% block js %}
-  {% endblock %}
+  {% block js %}{% endblock %}
 </body>
 
 </html>
