Revert "Vote fix"

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -67,3 +67,7 @@
     {% include "reviews/reviews.html" with reviews=reviews %}
     </div>
 {% endblock %}
+
+{% block js %}
+<script type="module" src="{% static 'reviews/review.js' %}"></script>
+{% endblock %}
