--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -27,4 +27,20 @@
 {% if reviews %}
 <script type="module" src="{% static 'reviews/sort_reviews.js' %}"></script>
 {% endif %}
-<script src="{% static 'reviews/review.js' %}"></script>
+<script type="module" src="{% static 'reviews/review.js' %}"></script>
+<script>
+    {% if user.is_authenticated %}
+        Array.prototype.forEach.call(document.getElementsByClassName("upvote"), function(button) {
+            button.addEventListener('click', ()=>{
+                    onclick="handleVote({{review.id}}, true)"
+            }, false);
+            button.href = "javascript:;"
+        });
+        Array.prototype.forEach.call(document.getElementsByClassName("downvote"), function(button) {
+            button.addEventListener('click', ()=>{
+                    onclick="handleVote({{review.id}}, false)"
+            }, false);
+            button.href = "javascript:;"
+        });
+    {% endif %}
+</script>
