--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -60,7 +60,7 @@
         <!-- Review written content -->
         <div class="new-review-content form-row mb-3">
           <h4 class="review-form-header form-group col-12 my-4">
-            Tell us more about the course & instructor</h4>
+            Tell us more about the course and instructor</h4>
           <div class="form-group col mb-3">
             <textarea class="form-control" id="reviewText" name="reviewText" rows="5"
                       placeholder="e.g. I love CS 2150, Bloomfield is great!"></textarea>
@@ -86,7 +86,7 @@
               </div>
               <div class="mt-3">
                   <label for="instructorRating" class="review-form-label">
-                    <i class="fas fa-smile-beam"></i> Enjoyability
+                    <i class="far fa-smile-beam"></i> Enjoyability
                   </label>
                   <div class="d-flex">
                       <span class="mr-2">1</span>
